[package]
name = "wasmer-winter"
description = "The JavaScript runtime that brings JavaScript to Wasmer Edge."
version = "0.1.0"
repository = "https://github.com/wasmerio/wasmer-winter/"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.75"
mozjs = { git = "https://github.com/wasmerio/mozjs.git", branch="wasi" }
# mozjs = { path = "../mozjs/mozjs" }
hyper = { version = "=0.14.27", features = ["server", "http1", "tcp"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
serde_derive = "1.0.164"
serde = "1.0.164"
serde_json = "1.0.97"
bytes = { version = "1.5.0", features = ["serde"] }
once_cell = "1.18.0"
reqwest = { version = "=0.11.18", default-features = false, features = ["rustls"], optional = true }
h2 = { version = "=0.3.20" }
futures = "0.3.28"
http = "0.2.9"

# for mozjs
libc = "=0.2.139"

# NOTE: We need to pin and replace some dependencies to achieve wasix compatibility.
# tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tokio = { version = "=1.24.2", features = ["full"] }
parking_lot = { version = "=0.12.1", features = ["nightly"] }
url = "2.4.1"
base64 = "0.21.4"

[features]
default = ["client-fetch"]
# The client-fetch JS API
client-fetch = ["reqwest"]

[patch.crates-io]
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "master" }
h2 = { git = "https://github.com/wasix-org/h2", branch = "master" }
hyper = { git = "https://github.com/wasix-org/hyper", branch = "v0.14.27" }
reqwest = { git = "https://github.com/wasix-org/reqwest", branch = "master" }