[package]
name = "winterjs"
description = "The JavaScript runtime that brings JavaScript to Wasmer Edge."
version = "1.1.5"
repository = "https://github.com/wasmerio/winterjs/"
license = "MIT"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.75"
hyper = { version = "=0.14.28", features = [
    "server",
    "http1",
    "tcp",
], git = "https://github.com/wasix-org/hyper", branch = "v0.14.28" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
serde_derive = "1.0.164"
serde = "1.0.164"
serde_json = "1.0.97"
bytes = { version = "1.5.0", features = ["serde"] }
once_cell = "1.18.0"
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.22.2", version = "=0.22.2" }
hyper-rustls = { version = "=0.25.0", git = "https://github.com/wasix-org/hyper-rustls.git", branch = "v0.25.0" }
h2 = { version = "=0.3.23", git = "https://github.com/wasix-org/h2.git", branch = "v0.3.23" }
futures = "0.3.28"
http = "0.2.9"
form_urlencoded = "1.2.0"

static-web-server = { git = "https://github.com/wasix-org/static-web-server", rev = "87bb6804a7e60db08399f8f7f22bb10bf028a489" }

ion = { package = "ion", features = [
    "macros",
], git = "https://github.com/wasmerio/spiderfire.git" }
ion-proc = { package = "ion-proc", git = "https://github.com/wasmerio/spiderfire.git" }
runtime = { package = "runtime", git = "https://github.com/wasmerio/spiderfire.git", features = ["fetch"]}
modules = { package = "modules", git = "https://github.com/wasmerio/spiderfire.git" }
mozjs = { version = "0.14.1", git = "https://github.com/wasmerio/mozjs.git", branch = "wasi-gecko", features = [
    "streams",
] }
mozjs_sys = { version = "0.68.2", git = "https://github.com/wasmerio/mozjs.git", branch = "wasi-gecko" }

# for mozjs
libc = { version = "=0.2.152", git = "https://github.com/wasix-org/libc.git", branch = "v0.2.152" }

# libc = "=0.2.139"

# NOTE: We need to pin and replace some dependencies to achieve wasix compatibility.
tokio = { version = "=1.35.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
parking_lot = { version = "=0.12.1", features = ["nightly"] }
url = "2.4.1"
base64 = "0.21.4"
async-trait = "0.1.74"
uuid = { version = "1.5.0", features = ["v4"] }
rand = "0.8.5"
rand_core = "0.6.4"
sha1 = "0.10.6"
sha2 = "0.10.8"
md5 = "0.7.0"
clap = { version = "4.4.7", features = ["derive", "env"] }
strum = { version = "0.25.0", features = ["derive"] }
hmac = { version = "0.12.1", features = ["std"] }
include_dir = "0.7.3"
dyn-clone = "1.0.16"
dyn-clonable = "0.9.0"
self_cell = "1.0.3"
glob-match = "0.2.1"
sys-locale = "0.3.1"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
ctrlc = "3.4.2"

[patch.crates-io]
hyper-rustls = { git = "https://github.com/wasix-org/hyper-rustls.git", branch = "v0.25.0" }
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.5.5" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "v0.2.152" }
mio = { git = "https://github.com/wasix-org/mio.git", branch = "v0.8.9" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.35.1" }
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.22.2" }
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.28" }
h2 = { git = "https://github.com/wasix-org/h2", branch = "v0.3.23" }

[profile.release-compact]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true