[package]
name = "mozjs"
description = "Rust bindings to the Mozilla SpiderMonkey JavaScript engine."
repository = "https://github.com/servo/mozjs"
version = "0.14.1"
authors = ["The Servo Project Developers"]
build = "build.rs"
license = "MPL-2.0"

[build-dependencies]
cc = "1"

[[example]]
name = "minimal"
[[example]]
name = "eval"

[[test]]
name = "callback"
[[test]]
name = "capture_stack"
[[test]]
name = "custom_auto_rooter"
[[test]]
name = "custom_auto_rooter_macro"
[[test]]
name = "enumerate"
[[test]]
name = "evaluate"
[[test]]
name = "offthread"
[[test]]
name = "panic"
[[test]]
name = "property_descriptor"
[[test]]
name = "rooting"
[[test]]
name = "runtime"
[[test]]
name = "runtime_no_outlive"
[[test]]
name = "typedarray"
[[test]]
name = "typedarray_panic"
[[test]]
name = "stack_limit"
[[test]]
name = "vec_conversion"

[lib]
doctest = false

[features]
debugmozjs = ['mozjs_sys/debugmozjs']
jitspew = ['mozjs_sys/jitspew']
profilemozjs = ['mozjs_sys/profilemozjs']
uwp = ['mozjs_sys/uwp']

[dependencies]
lazy_static = "1"
libc = "0.2"
log = "0.4"
num-traits = "0.2"
mozjs_sys = { path = "../mozjs" }
