[package]
name = "mozjs"
description = "Rust bindings to the Mozilla SpiderMonkey JavaScript engine."
repository.workspace = true
version = "0.14.1"
authors = ["The Servo Project Developers"]
build = "build.rs"
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
debugmozjs = ['mozjs_sys/debugmozjs']
jitspew = ['mozjs_sys/jitspew']
profilemozjs = ['mozjs_sys/profilemozjs']
uwp = ['mozjs_sys/uwp']

[dependencies]
lazy_static = "1"
libc.workspace = true
log = "0.4"
num-traits = "0.2"
mozjs_sys = { path = "../mozjs" }

[build-dependencies]
cc.workspace = true
