[package]
name = "test-suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = "4.4.12"
futures = "0.3.30"
libtest-mimic = "0.6.1"
pretty_assertions = "1.4.0"
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "=1.24.2", features = ["full"] }
toml = "0.8.8"
