[package]
name = "wasmer-jassy"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.75"
mozjs = { path = "../rust-mozjs" }
mozjs_sys = { path = "../mozjs" }
